# dotfiles

./: .chezmoiignore  .editorconfig  .gitignore  .mailmap  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  CLAUDE.md  README.md  ZSH_GUIDE.md  biome.json  bw-new-secure-note.sh  install-claude.sh  install.sh  mise.toml  renovate.json5
.github/: copilot-instructions.md
.memory-bank/: autohotkey-setup.md
.opencode/: opencode.jsonc
docs/: agent-factory.md
home/: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .chezmoiremove  Brewfile  Brewfile.tmpl  Taskfile.yml  dot_bash_aliases  dot_bash_profile  dot_bashrc  dot_gitconfig.tmpl  dot_mcp.json  dot_minttyrc  dot_p10k.zsh  dot_profile  dot_zprofile  dot_zshenv  dot_zshenv.tmpl  dot_zshrc
scripts/gh-review/: pyproject.toml
scripts/gh-review/gh_review/: __init__.py  __main__.py  _errors.py  _formatting.py  _gh.py  cli.py  comment.py  delete.py  duration.py  edit.py  formatting.py  gh.py  remove.py  reply.py  sanitize.py  start.py  view.py
scripts/gh-review/gh_review/commands/: comment.py  delete.py  reply.py  start.py  view.py
scripts/gh-review/tests/: conftest.py  test_comment.py  test_duration.py  test_edit.py  test_formatting.py  test_remove.py  test_sanitize.py  test_view.py
scripts/linear-cli/: pyproject.toml
scripts/linear-cli/linear_cli/: __main__.py  _auth.py  _config.py  _errors.py  _graphql.py  _models.py  _queries.py  _resolve.py  api.py  auth.py  cli.py  comments.py  documents.py  issues.py  labels.py  links.py  me.py  projects.py  relations.py  states.py  teams.py
scripts/linear-cli/tests/: conftest.py  test_api.py  test_auth.py  test_comments.py  test_documents.py  test_graphql.py  test_issues.py  test_labels.py  test_links.py  test_me.py  test_projects.py  test_relations.py  test_states.py  test_teams.py
scripts/research/: pyproject.toml
scripts/research/research/: __init__.py  __main__.py  _browser.py  _budget.py  _cache.py  _click.py  _errors.py  _fetch.py  _ghapi.py  _linkup.py  _render.py  cli.py  pdf.py  status.py  web.py
scripts/research/research/scout/: __init__.py  _clone.py  _common.py  commits.py  explore.py  issues.py  local.py  synthesis.py
scripts/research/tests/: test_budget.py  test_cache.py  test_fetch.py  test_ghapi.py  test_render.py  test_status.py  test_web.py
(+270 files in other folders)
