[project]
name = "gh-review"
version = "0.1.0"
description = "LLM-optimized PR review tool wrapping GitHub CLI"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gh_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
