[project]
name = "linear-cli"
version = "0.1.0"
description = "LLM-optimized Linear project management CLI"
requires-python = ">=3.13"
dependencies = ["click>=8.1", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linear_cli"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
